feat: add test cases